[package]
name = "dm_auto_refactor"
version = "0.1.0"
edition = "2021"

[dependencies]
dm = { package = "dreammaker", git = "https://github.com/spacemaniac/spacemandmm.git", version = "0.1.0" }
dmc = { package = "dreamchecker", git = "https://github.com/spacemaniac/spacemandmm.git" }
serde = "1.0.219"
